Fix security flaw: move js API call to backend.

--- a/influencer/templates/influencer/await_verification.html
+++ b/influencer/templates/influencer/await_verification.html
@@ -25,5 +25,13 @@
         text-align: center;
         color: #0471ff;
     }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 80vw;
+            margin: auto;
+            margin-top: 40px;
+        }
+    }
 </style>
 {% endblock %}
