--- a/brand/templates/brand/campaign.html
+++ b/brand/templates/brand/campaign.html
@@ -271,12 +271,13 @@
         </div>
     {% endif %}
 </div>
+<script src="https://cdn.jsdelivr.net/npm/js-base64@3.5.2/base64.min.js"></script>
 <script>
     $('main').css('background-color', '#fff');
     $('.campaigns-top-nav').addClass('is-active');
     $('.post-section').each(function(index) {
         $.ajax({
-            url: `https://graph.facebook.com/v8.0/instagram_oembed?url=${$(`#insta-embed-${index}`).attr('data-instalink')}&access_token={% get_access_token %}`,
+            url: `/brand/fetch-insta-html/${Base64.encodeURI($(`#insta-embed-${index}`).attr('data-instalink'))}/`,
             async: true,
             success: function (result) {
                 $(`#insta-embed-${index} .spinner-wrapper`).remove();
