--- a/brand/templates/brand/profile.html
+++ b/brand/templates/brand/profile.html
@@ -112,6 +112,7 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/js-base64@3.5.2/base64.min.js"></script>
 <script>
     $('main').css('background-color', '#fff');
     {% if request.user.is_brand %}
@@ -131,7 +132,7 @@
             </div>
         `);
         $.ajax({
-            url: `https://graph.facebook.com/v8.0/instagram_oembed?url=${link}&access_token={% get_access_token %}`,
+            url: `/brand/fetch-insta-html/${Base64.encodeURI(link)}/`,
             async: true,
             success: function (result) {
                 $("#post-container-{{ forloop.counter }} .loader-container").remove();
