--- a/influencer/templates/influencer/profile_endorsements.html
+++ b/influencer/templates/influencer/profile_endorsements.html
@@ -101,6 +101,7 @@
 <div class="mdl-tooltip" for="follower-count-info">
     Updated every 3 hours
 </div>
+<script src="https://cdn.jsdelivr.net/npm/js-base64@3.5.2/base64.min.js"></script>
 <script>
     $('main').css('background-color', '#fff');
     {% if not request.user.is_brand %}
@@ -121,7 +122,7 @@
             </div>
         `);
         $.ajax({
-            url: `https://graph.facebook.com/v8.0/instagram_oembed?url=${link}&access_token={% get_access_token %}`,
+            url: `/influencer/fetch-insta-html/${Base64.encodeURI(link)}/`,
             async: true,
             success: function (result) {
                 $("#post-container-{{ forloop.counter }} .loader-container").remove();
